--- a/About me/Storyboards/Base.lproj/Main.storyboard
+++ b/About me/Storyboards/Base.lproj/Main.storyboard
@@ -177,7 +177,7 @@
             </objects>
             <point key="canvasLocation" x="1831" y="80"/>
         </scene>
-        <!--About Me View Controller-->
+        <!--About me-->
         <scene sceneID="lxW-NU-yNq">
             <objects>
                 <viewController id="ffg-kL-vNe" customClass="AboutMeViewController" customModule="About_me" customModuleProvider="target" sceneMemberID="viewController">
@@ -203,9 +203,9 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VAp-pv-3s0">
                                         <rect key="frame" x="0.0" y="180" width="374" height="223.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="11" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0O-R6-3jF">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="11" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0O-R6-3jF">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="223.5"/>
-                                                <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
+                                                <mutableString key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</mutableString>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -224,7 +224,7 @@
                             <constraint firstItem="SDw-Fp-PYP" firstAttribute="centerY" secondItem="Cvi-VQ-50W" secondAttribute="centerY" id="wGQ-pY-ygb"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Lm2-0r-Ot5"/>
+                    <navigationItem key="navigationItem" title="About me" id="Lm2-0r-Ot5"/>
                     <connections>
                         <outlet property="userImage" destination="gyj-X9-tmc" id="fsy-uu-QCC"/>
                         <outlet property="userInfo" destination="Q0O-R6-3jF" id="Bx4-TT-xza"/>
@@ -234,17 +234,57 @@
             </objects>
             <point key="canvasLocation" x="3575.3846153846152" y="77.488151658767762"/>
         </scene>
-        <!--My Hobby View Controller-->
+        <!--My hobby-->
         <scene sceneID="679-On-FHY">
             <objects>
                 <viewController id="fGP-TO-Rjf" customClass="MyHobbyViewController" customModule="About_me" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a5b-KE-iO3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="ciS-TG-Ay0">
+                                <rect key="frame" x="20" y="194" width="374" height="375.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="u8o-mZ-c7w">
+                                        <rect key="frame" x="0.0" y="0.0" width="41.5" height="207"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRp-g5-8SY">
+                                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="207"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Zzo-Aq-Xmj">
+                                        <rect key="frame" x="0.0" y="247" width="306" height="128.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zZc-vT-VZe">
+                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128.5"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ayJ-Xb-6Xh">
+                                                <rect key="frame" x="178" y="0.0" width="128" height="128.5"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="JaT-XV-Eld"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ciS-TG-Ay0" secondAttribute="trailing" constant="20" id="6Fb-Uk-P75"/>
+                            <constraint firstItem="ciS-TG-Ay0" firstAttribute="top" secondItem="JaT-XV-Eld" secondAttribute="top" constant="106" id="KgO-wx-lSm"/>
+                            <constraint firstItem="ciS-TG-Ay0" firstAttribute="leading" secondItem="JaT-XV-Eld" secondAttribute="leading" constant="20" id="fZO-YP-Oy2"/>
+                            <constraint firstItem="JaT-XV-Eld" firstAttribute="bottom" secondItem="ciS-TG-Ay0" secondAttribute="bottom" constant="243.5" id="j9h-Wq-B7K"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Did-bg-SjI"/>
+                    <navigationItem key="navigationItem" title="My hobby" id="Did-bg-SjI"/>
+                    <connections>
+                        <outlet property="developImage" destination="zZc-vT-VZe" id="AKc-5r-bmY"/>
+                        <outlet property="swiftImage" destination="ayJ-Xb-6Xh" id="fDq-4T-oLz"/>
+                        <outlet property="userHobbyText" destination="MRp-g5-8SY" id="GQr-HV-HzO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L7d-hE-x0W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
